Fix header gap

--- a/release-notes/styles/release-notes.css
+++ b/release-notes/styles/release-notes.css
@@ -19,7 +19,7 @@ h4 {
 
   border-bottom: 1px solid var(--c-accent);
 
-  padding-bottom: 1.0rem;
+  padding-bottom: 0.5rem;
   margin-top: 6.0rem;
   margin-bottom: 0;
 }
